--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,27 @@
 /* Global Styles */
 
-body, html {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.container {
+    padding-right: 20px;
+    padding-left: 20px;
     margin: 0 auto;
     background-color: #fff;
     text-align: center;
-    max-width: 980px;
-    height: 100%;
-    border-style: none;    
+    border-style: none;
 }
 
 /* Search Styles */
 
 .search {
-    margin: auto;
-    max-width: 480px;
-    padding: 30px;
+    margin: 0 auto;
+    max-width: 460px;
+    padding: 30px 0 30px 0;
 }
 
 .search input {
@@ -22,7 +29,6 @@ body, html {
     height: 45px;
     border-radius: 10px;
     border: 1px solid #e5e5e5;
-    padding-left: 15px;
     outline-width: 0;
     font-size: 16pt;
     text-align: center;
@@ -30,19 +36,24 @@ body, html {
 
 /* Gallery Styles */
 
-.gallery { 
+#gallery { 
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-.row {
-    margin: auto;
-    margin-bottom: 55px;
-    width: 200px;
-    height: 200px;
+#gallery a img {
+    width: 100%;
+    max-height: 200px;
+    max-width: 200px;
+    padding: 10px;
 }
 
 /* Lightbox Styles */
+
+div#lightboxOverlay.lightboxOverlay {
+    background-color: rgba(60, 60, 60, .9999);   
+}
 
 .lb-data,
 .lb-details {
@@ -52,32 +63,40 @@ body, html {
     color: #fff;
 }
 
-.lb-details {
-    margin: 0;
-    max-width: 600px;    
-    padding-top: 70px;
-    font-family: sans-serif;
-}
-
 div.lb-data .lb-caption {
     line-height: 2em;
-    font-size: 1.25em;
+    font-size: .8em;
     background-color: rgb(50, 50, 50);
-    padding: 1em;
+    padding: .5em;
     border-radius: 10px;
 }
 
-.lb-closeContainer{ 
-    position: relative; 
-    right: -80px; 
-    top: -505px; 
-    z-index: 5000;
+/* Media Queries */
+
+@media (min-width: 768px) {
+
+    .container {
+        width: 95%;
+    }
+
+    .lb-nav a.lb-next,
+    .lb-nav a.lb-prev{
+      opacity: 1;
+    }
+
+    div.lb-data .lb-caption {
+        line-height: 2em;
+        font-size: 1.25em;
+        background-color: rgb(50, 50, 50);
+        padding: 1em;
+        border-radius: 10px;
+    }
+
 }
 
-div#lightboxOverlay.lightboxOverlay {
-    background-color: rgba(60, 60, 60, .9999);   
-}
+@media (min-width: 1024px) {
 
-div.lb-nav a.lb-prev, div.lb-nav a.lb-next {
-    opacity: 1;
+    .container {
+        max-width: 980px;
+    }
 }
